# gerbil-scheme-rust

./: .bazelignore  .bazelrc  .envrc  .gitignore  BUILD.bazel  CONTRIBUTING.org  Cargo.toml  LICENSE  MODULE.bazel  README.org  build.ss  devenv.nix  gerbil.pkg
.github/workflows/: ci.yml
build-support/gerbil-scheme-native-build/: Cargo.toml  build.rs
build-support/gerbil-scheme-native-build/src/: archive.rs  discovery.rs  generated_scm.rs  header.rs  lib.rs  native.rs  toolchain.rs
build-support/gerbil-scheme-native-build/tests/: unit_test.rs
build-support/gerbil-scheme-native-build/tests/unit/: archive.rs  discovery.rs  generated_scm.rs  header.rs  scenario_benchmark_suite.rs  support.rs  toolchain.rs
build-support/gerbil-scheme-native-build/tests/unit/scenarios/gambit-wrapper-discovery/: benchmark.toml  scenario.toml
build-support/gerbil-scheme-native-build/tests/unit/scenarios/native-archive-plan/: benchmark.toml  scenario.toml
build-support/gerbil-scheme-rust-project-harness/: Cargo.toml  UPSTREAM.org
build-support/gerbil-scheme-rust-project-harness-policy/: Cargo.toml  build.rs
build-support/gerbil-scheme-rust-project-harness-policy/src/: config.rs  lib.rs
build-support/gerbil-scheme-rust-project-harness/provider/: asp-provider-manifest.json
build-support/gerbil-scheme-rust-project-harness/schemas/: semantic-workspace-scope.v1.schema.json
crates/gerbil-scheme/: Cargo.toml
crates/gerbil-scheme-build/: Cargo.toml
crates/gerbil-scheme-build/src/: lib.rs  package_native_aot.rs
crates/gerbil-scheme-build/tests/: real_gerbil_compiler.rs  scenario_benchmark_suite.rs
crates/gerbil-scheme-build/tests/unit/scenarios/compiler-source-emission/: benchmark.toml  scenario.toml
crates/gerbil-scheme-sys/: Cargo.toml  build.rs
crates/gerbil-scheme-sys/src/: abi.rs  abi_bytevector.rs  abi_integer_bytes.rs  abi_rooted_bytes.rs  abi_sentinel.rs  lib.rs  scheme_char.rs  scheme_exact_integer.rs  scheme_fixnum.rs  scheme_flonum.rs
crates/gerbil-scheme-sys/tests/unit/: abi_integer_bytes.rs  mod.rs  scenario_benchmark_suite.rs  scheme_exact_integer.rs
crates/gerbil-scheme-sys/tests/unit/scenarios/borrowed-collection-shapes/: benchmark.toml  scenario.toml
crates/gerbil-scheme-sys/tests/unit/scenarios/procedure-callback-boundary/: benchmark.toml  scenario.toml
crates/gerbil-scheme-sys/tests/unit/scenarios/scalar-value-shapes/: benchmark.toml  scenario.toml
crates/gerbil-scheme/benches/: native_ffi.rs
crates/gerbil-scheme/src/: lib.rs  native.rs  native_environment.rs
crates/gerbil-scheme/tests/: native_bytestring_benchmark.rs  native_error_contract.rs  native_exact_integer.rs  native_exact_integer_benchmark.rs  native_ffi_benchmark.rs  native_identity.rs  native_integer_bytes_benchmark.rs  native_result_contract.rs  native_rooted_value.rs  native_rooted_value_benchmark.rs  native_runtime.rs  native_runtime_round_trip.rs  native_safe_value_surface.rs  native_value_surface.rs  real_gerbil.rs  scenario_benchmark_suite.rs  source_surface.rs  status_contract.rs  toolchain_program.rs
crates/gerbil-scheme/tests/unit/: native_safe_value_surface.rs  scenario_benchmark_suite.rs
crates/gerbil-scheme/tests/unit/scenarios/backed-value-family-surface/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/bytevector-bytestring-round-trip/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/exact-integer-projection-round-trip/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/integer-bytevector-round-trip/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/invalid-comparison-fail-closed/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/native-ffi-steady-state/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/native-identity-round-trip/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/native-result-contract/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/native-runtime-round-trip/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/native-value-surface/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/rooted-scheme-value-round-trip/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/safe-bytevector-borrow/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/safe-handle-backed-views/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/safe-pair-list-status/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/safe-scalar-projection/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/safe-vector-borrow/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/source-surface-sync/: benchmark.toml  scenario.toml
crates/gerbil-scheme/tests/unit/scenarios/status-contract/: benchmark.toml  scenario.toml
docs/: 00-index.org  scheme-type-matrix.org
docs/10-19-design/: 10.01-gerbil-scheme-rust-bindings-rfc.org  10.02-gerbil-aot-ffi-performance-rfc.org
docs/20-29-roadmap/: 20.01-bindings-bootstrap-plan.org  20.02-marlin-consumer-migration-plan.org
docs/30-39-status/: 30.01-bootstrap-receipts.org
docs/40-rfcs/: 40.010-gerbil-scheme-rust-bindings-roadmap.org  40.012-gerbil-scheme-source-surface.org  40.013-gerbil-scheme-types-checklist.org  40.014-gerbil-scheme-rust-bridge-engineering-standard.org  40.014-native-result-contract.org  40.016-void-sentinel-bindings-slice.org  40.017-bytevector-readonly-bindings-slice.org  40.018-rooted-bytestring-conversion-slice.org  40.019-integer-bytevector-conversion-slice.org  40.020-exact-integer-projection-slice.org  40.021-rooted-scheme-value-slice.org
include/: gerbil_scheme_rust.h
native/: runtime.c
scheme/: gerbil_scheme_rust.h  native-host.ss  native.ss  native.ssi  test-native.ss
scheme/asp/: native-surface.ss
tools/bazel/: BUILD.bazel  bootstrap_gerbil_toolchain.sh  cargo_gate.sh  gerbil_gate.sh
(+15 files in other folders)
