module(
    name = "gerbil_scheme_rust",
    version = "0.1.0",
)

bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_shell", version = "0.8.0")
bazel_dep(name = "gerbil_bazel", version = "0.1.0")
git_override(
    module_name = "gerbil_bazel",
    commit = "a1bc9ce7191c6fa2ea5550854398ca4f9c25c2e3",
    remote = "https://github.com/tao3k/gerbil-bazel.git",
)

gerbil = use_extension("@gerbil_bazel//gerbil:extensions.bzl", "gerbil")
gerbil.host(
    name = "shared_gerbil",
    expected_version_prefixes = [
        "Gerbil 07c8481",
        "Gerbil v0.18.2",
    ],
)
use_repo(gerbil, "shared_gerbil")

register_toolchains("@shared_gerbil//:registered_toolchain")

bazel_dep(name = "platforms", version = "1.0.0")

http_archive = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:http.bzl",
    "http_archive",
)

git_repository = use_repo_rule(
    "@bazel_tools//tools/build_defs/repo:git.bzl",
    "git_repository",
)

git_repository(
    name = "gerbil_poo_sources",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files(["gerbil.pkg"])
filegroup(name = "sources", srcs = glob(["**/*.ss", "gerbil.pkg"]))
""",
    commit = "1c3225637525400341a09e958296962c10184ead",
    remote = "https://github.com/mighty-gerbils/gerbil-poo.git",
)

http_archive(
    name = "gerbil_utils_sources",
    build_file_content = """
package(default_visibility = ["//visibility:public"])
exports_files(["gerbil.pkg"])
filegroup(name = "sources", srcs = glob(["**/*.ss", "gerbil.pkg"]))
""",
    sha256 = "e7777c505e71de490dc05f8e3ff4473dddbc998a99899c085d31750add551296",
    strip_prefix = "gerbil-utils-f45a4ef3bfecd2af39e114ed736ce9082cbb8244",
    type = "tar.gz",
    urls = [
        "https://codeload.github.com/mighty-gerbils/gerbil-utils/tar.gz/f45a4ef3bfecd2af39e114ed736ce9082cbb8244",
    ],
)
