[package]
name = "gerbil-scheme-native-build"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
cbindgen.workspace = true
cc.workspace = true
sha2.workspace = true

[dev-dependencies]
gerbil-scheme-rust-project-harness.workspace = true

[build-dependencies]
gerbil-scheme-rust-project-harness-policy.workspace = true
