[package]
name = "gerbil-scheme"
description = "Safe Rust bindings for invoking Gerbil Scheme."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
gerbil-scheme-sys.workspace = true

[dev-dependencies]
divan.workspace = true
gerbil-scheme-rust-project-harness.workspace = true

[[bench]]
name = "native_ffi"
harness = false

[lints]
workspace = true
